# paulstretch_cpp

./: BinauralBeats.cpp  BinauralBeats.h  CMakeLists.txt  CMakeLists.txt.mxml  Control.cpp  Control.h  FreeEdit.cpp  FreeEdit.h  FreeEditUI.fl  GUI.fl  JAaudiooutput.cpp  JAaudiooutput.h  Mutex.cpp  Mutex.h  PAaudiooutput.cpp  PAaudiooutput.h  PaulStretch.cmake  Player.cpp  Player.h  ProcessedStretch.cpp  ProcessedStretch.h  RemoveFlags.cmake  Stretch.cpp  Stretch.h  SuperBuild.cmake  Thread.cpp  Thread.h  XMLwrapper.cpp  XMLwrapper.h  compile_linux_fftw.sh  compile_linux_fftw_jack.sh  compile_linux_kissfft.sh  compile_win32.sh  globals.cpp  globals.h  readme.txt  version.h
Input/: AInputS.cpp  AInputS.h  InputS.h  MP3InputS.cpp  MP3InputS.h  VorbisInputS.cpp  VorbisInputS.h
Output/: AOutputS.cpp  AOutputS.h  VorbisOutputS.cpp  VorbisOutputS.h
ressources/: paulstretch.1  paulstretch.desktop  paulstretch.fr.1  paulstretch.xpm
